HelloUltraviolet/Fixtures/RejectedSource/FFI/ErrorPredicateWellFormedness/Source/Main.uv
//! Rejected FFI specimen for error predicates on void-returning foreign procedures.

extern "C" {
    public procedure importedErrorVoid() -> ()
        |: @foreign_ensures(@error: true)
}
